tests/js_error/source_locations/expression/yield_star/next_check_iterator_result_object_throws.exp
TypeError: iterator result must be an object
   ┌ tests/js_error/source_locations/expression/yield_star/next_check_iterator_result_object_throws.js:12:3
   |
12 |   yield* iterable;
   |   ^
Stack trace:
  at generator (tests/js_error/source_locations/expression/yield_star/next_check_iterator_result_object_throws.js:12:3)
  at next (<native>)
  at <global> (tests/js_error/source_locations/expression/yield_star/next_check_iterator_result_object_throws.js:16:1)